<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView android:text="@string/main_title" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/titleColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_spotify"
            android:id="@+id/buttonSpotify"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scores"
            android:id="@+id/buttonScores"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_library"
            android:id="@+id/buttonLibrary"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_build_bigger"
            android:id="@+id/buttonBuildBigger"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reader"
            android:id="@+id/buttonReader"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_capstone"
            android:id="@+id/buttonCapstone"
            android:layout_gravity="center_horizontal"
            android:onClick="mainAppsOnClickEvent"
            android:backgroundTint="@color/buttonColor" />

    </LinearLayout>
</ScrollView>
